refactor: 골 생성시 골 참여자가 관리자와 친구 상태인지 검증 추가